# agrihealth

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements_dev.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: docs.yml  installation.yml
agrihealth/: __init__.py  index.html
changelog/: index.html
common/: index.html
contributing/: index.html
docs/: agrihealth.md  common.md  contributing.md  index.md  installation.md  usage.md
docs/examples/: crops.ipynb
examples/crops/: index.html
examples/intro/: index.html
faq/: index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_agrihealth.py
usage/: index.html
